# kloakt

./: AGENTS.md  README.md  kloakt.py  mcp_server.py  obscura.py  pyproject.toml  server.json
crates/obscura-cli/: Cargo.toml
crates/obscura-cli/src/: main.rs
